fixed the alignment of the landing page

--- a/public/styles.css
+++ b/public/styles.css
@@ -88,7 +88,7 @@ input {
 
 .exchange-history {
     position: absolute;
-    margin-top: 260px;
+    margin-top: 310px;
     padding: 10px;
     width: 35%;
     height: 280px;
